@startuml

title __PLACE's Class Diagram__\n

  package logic {
    package logic.place {
      class Address {
          + Address()
          + toString()
          + getCountry()
          + getCity()
          + getHome()
      }
    }
  }
  

  package logic {
    package logic.place {
      class AddressBuilder {
          {static} - ourInstance : AddressBuilder
          - homeNumber : String
          - streetNumber : String
          - postalCode : String
          - street : String
          - cityName : String
          - region : String
          {static} + getInstance()
          - AddressBuilder()
          + clear()
          + isComplete()
          + build()
          + buildAndClear()
          + setHomeNumber()
          + setStreetNumber()
          + setPostalCode()
          + setStreet()
          + setCityName()
          + setRegion()
          + setCountry()
      }
    }
  }
  

  package logic {
    package logic.place {
      class City {
          - name : String
          - region : String
          + City()
          + toString()
          + getName()
          + getRegion()
      }
    }
  }
  

  package logic {
    package logic.place {
      enum Country {
        POLAND
        UK
        shortand
        fullName
        name
        fullLocalName
        localName
      }
    }
  }
  

  package logic {
    package logic.place {
      class Home {
          - homeNumber : String
          - streetNumber : String
          - postalCode : String
          - street : String
          + Home()
          + toString()
          + getHomeNumber()
          + getStreetNumber()
          + getPostalCode()
          + getStreet()
      }
    }
  }
  

  Address o-- Country : country
  Address o-- City : city
  Address o-- Home : home
  AddressBuilder -up-|> Builder
  AddressBuilder o-- Country : country


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
